# llm-seo

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
data/entries/: brands.json  config_template.json  queries.json  query_template.json
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: Wizard.tsx
frontend/src/components/compare/: CompareCharts.tsx
frontend/src/components/dashboard/: BrandRankingTable.tsx  CategoryBarChart.tsx  LLMResponseModal.tsx  Leaderboard.tsx  Podium.tsx  ProviderPanel.tsx  ProviderRadarChart.tsx  QueryDetailsTable.tsx  Sparkline.tsx  StatCard.tsx  StatCards.tsx
frontend/src/components/layout/: AppLogo.tsx  AppShell.tsx  Sidebar.tsx
frontend/src/components/run/: CompletionCard.tsx  ProviderCard.tsx  QueryPreviewList.tsx  (+3 more)
frontend/src/data/: demoData.ts
frontend/src/pages/: ComparePage.tsx  DashboardPage.tsx  GlossaryPage.tsx  HomePage.tsx  RunPage.tsx  SettingsPage.tsx
src/: cli.py  config_loader.py  llm_clients.py  mention_analyzer.py  onboarding.py  queries_generator.py  query_enhancer.py  query_runner.py
tests/: test_config.yaml  test_config_loader.py  test_mention_analyzer.py  test_query_generator.py  test_query_runner.py
tests/fixtures/: test_config.yaml
tests/test_data/: test_brands.json  test_templates.json
webapp/: app.py  data_loader.py  run_manager.py
webapp/static/: index.html
webapp/static/assets/: index-C6c-3FGw.css  index-D9Z8H5-J.js
webapp/templates/: index.html
(+4 files in other folders)
