[project]
name = "llm-seo"
version = "0.1.0"
description = ""
authors = [
    {name = "cnxls",email = "oles.melinyshyn2007@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai (>=2.8.0,<3.0.0)",
    "anthropic (>=0.73.0,<0.74.0)",
    "google-generativeai (>=0.8.5,<0.9.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "google-genai (>=1.50.1,<2.0.0)",
    "argparse (>=1.4.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
